more testing and added a enum for reinforcement mode